 - The content negotiation was not properly handling the situation where no language and media type preferences are defined. Reported by Thierry Boileau.
 - Fixed potential NPE in DefaultClient and RedirectTestCase when no connector found.
 - Fixed bug in NRE's factory which prevented the detection of HTTPS connectors. Now all HTTPS connectors work fully (Simple, Jetty5 and Jetty6).
 
[API breaking changes]
 - Removed get/setTimeout() methods from the Client interface and related classes. Also, removed the configureSsl() method from the Server interface.
 	We will now use connectors'parameters instead. Suggested by John D. Mitchell.
 - NRE's HttpClient (based on HttpUrlConnection) now used these parameters: "chunkLength", "followRedirects", "allowUserInteraction", "useCaches"
   "connectTimeout" and "readTimeout".
 - NRE's HttpClient no longers sets the JDK's system property "http.keepalive" to "false". This could conflict with other classes using HttpUrlConnection.
 - Jetty 5.1 connector now supports parameters: "minThreads", "maxThreads", "lowResourcePersistTimeMs", "maxIdleTimeMs" for the HTTP server and
   "keystorePath", "keystorePassword", "keyPassword" for the HTTPS one.
 - Simple 3.1 connector now supports parameters: "defaultThreads", "waitTimeMs" for the HTTP server and "keystorePath", "keystorePassword",
   "keyPassword" for the HTTPS one.
 - Moved Jetty5 to com.noelios.ext.jetty5 package so that Javadocs of both versions can be displayed.
 - The "X-Forwarded-For" header is not used anymore by default to get all client addresses, including intermediary proxies. However, there is now a 
   standard way to enable this feature: by setting the "useForwardedForHeader" parameter to "true" for the HTTP server connector used. Be aware of the
   potential security effects of using this header if you don't control all the intermediary proxies as the header could be faked otherwise. This change
   was suggested by John D. Mitchell.