@@ -217,15 +217,12 @@ public class WrapperCall implements Call
    }
 
    /**
-    * Returns the reference of the output representation. This is used in several situations: when
-    * redirecting the client to a different URI, when creating a new resource after a POST call for
-    * example or when the output reference has a specific URI that is different from the identified
-    * resource URI.
+    * Returns the reference that the client should follow for redirections or creation of new resources.
     * @return The redirection reference.
     */
-   public Reference getOutputRef()
+   public Reference getRedirectRef()
    {
-      return getWrappedCall().getOutputRef();
+      return getWrappedCall().getRedirectRef();
    }
 
    /**
@@ -377,25 +374,21 @@ public class WrapperCall implements Call
    }
 
    /**
-    * Sets the reference of the output representation. This is used in several situations: when
-    * redirecting the client to a different URI, when creating a new resource after a POST call for
-    * example or when the output reference has a specific URI that is different from the identified
-    * resource URI.
-    * @param outputRef The output reference.
+    * Sets the reference that the client should follow for redirections or creation of new resources.
+    * @param redirectRef The redirection reference.
     */
-   public void setOutputRef(Reference outputRef)
+   public void setRedirectRef(Reference redirectRef)
    {
-      getWrappedCall().setOutputRef(outputRef);
+      getWrappedCall().setRedirectRef(redirectRef);
    }
 
    /**
-    * Sets the reference of the output representation. Note that the output URI can be either 
-    * absolute or relative to the current call's context reference.
-    * @param outputUri The output URI.
+    * Sets the reference that the client should follow for redirections or creation of new resources.
+    * @param redirectUri The redirection URI.
     */
-   public void setOutputRef(String outputUri)
+   public void setRedirectRef(String redirectUri)
    {
-      getWrappedCall().setOutputRef(outputUri);
+      getWrappedCall().setRedirectRef(redirectUri);
    }
 
    /**
