@@ -122,6 +122,15 @@ public abstract class AbstractResource extends AbstractRestlet implements Resour
 			getIdentifiers().set(0, identifier);
 		}
 	}
+	
+	/**
+	 * Sets the official identifier from a URI string.
+	 * @param identifierUri The official identifier to parse.
+	 */
+	public void setIdentifier(String identifierUri)
+	{
+		setIdentifier(new Reference(identifierUri));
+	}
 
 	/**
 	 * Returns the list of all the identifiers for the resource. The list is composed of the official identifier
