@@ -59,6 +59,12 @@ public interface Resource extends Data, Restlet
 	public void setIdentifier(Reference identifier);
 	
 	/**
+	 * Sets the official identifier from a URI string.
+	 * @param identifierUri The official identifier to parse.
+	 */
+	public void setIdentifier(String identifierUri);
+	
+	/**
 	 * Returns the list of all the identifiers for the resource. The list is composed of the official identifier
 	 * followed by all the alias identifiers.
 	 * @return The list of all the identifiers for the resource.
